--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -5,16 +5,18 @@
   /* display: flex; */
   /* align-items: center; */
   /* justify-content: center; */
-  margin-left: -60px;
+  margin-left: -50px;
 }
 
 .login-container {
   /* max-width: 570px; */
   width: 100%;
+  border: 4px solid rgb(253, 253, 253);
   border-radius: 10px;
-  padding: 20px 30px;
+
+  padding: 20px 27px;
   background-color: rgb(253, 193, 64);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
 }
 
 .login-container .login h3 {
@@ -26,6 +28,7 @@
 
 .login-container form {
   display: flex;
+
   flex-direction: column;
   gap: 20px;
   margin-top: 40px;
