--- a/src/components/register/Regsiter.css
+++ b/src/components/register/Regsiter.css
@@ -11,10 +11,12 @@
 .signup-container {
   /* max-width: 570px; */
   width: 100%;
+  border: 4px solid rgb(253, 253, 253);
   border-radius: 10px;
-  padding: 20px 30px;
+
+  padding: 20px 27px;
   background-color: rgb(253, 193, 64);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
 }
 
 .signup-container .signup h3 {
