--- a/src/components/days/Days.css
+++ b/src/components/days/Days.css
@@ -1,5 +1,5 @@
 .body {
-  background-color: rgb(253, 193, 64);
+  background-color: #ffa500;
 }
 .days-container {
   /* max-width: 570px; */
@@ -7,7 +7,7 @@
   border: 4px solid rgb(253, 253, 253);
   border-radius: 10px;
   padding: 20px 37px;
-  background-color: rgb(253, 193, 64);
+  background-color: #ffa500;
   /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
   margin-left: -13px;
 }
