--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -6,7 +6,7 @@
   border-radius: 10px;
   padding: 20px 30px;
   padding-top: 100px;
-  background-color: rgb(253, 193, 64);
+  background-color: #ffa500;
   /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
 }
 
