--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -15,7 +15,7 @@
   border-radius: 10px;
 
   padding: 20px 27px;
-  background-color: #ffa500;
+  background-color: #fdd994;
   /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
 }
 
