--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #ffa500;
+  background-color: #fdd994;
 }
 
 h1 {
