--- a/src/components/days/Days.css
+++ b/src/components/days/Days.css
@@ -1,13 +1,14 @@
 .body {
-  background-color: #ffa500;
+  background-color: #fdd994;
 }
+
 .days-container {
   /* max-width: 570px; */
   width: 100%;
   border: 4px solid rgb(253, 253, 253);
   border-radius: 10px;
   padding: 20px 37px;
-  background-color: #ffa500;
+  background-color: #fdd994;
   /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
   margin-left: -13px;
 }
