--- a/src/components/word-match/WordMatch.css
+++ b/src/components/word-match/WordMatch.css
@@ -14,7 +14,7 @@
   width: 50%;
   margin: 10px;
   padding: 10px;
-  background-color: #ffa500;
+  background-color: #fdd994;
   border: 4px solid rgb(255, 252, 252);
   font-size: 20px;
   font-weight: bold;
