--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,5 +1,4 @@
 .home-container {
-  width: 90%;
   height: 250px;
   margin: auto;
   border: 4px solid rgb(253, 253, 253);
@@ -7,7 +6,7 @@
   padding: 20px 30px;
   padding-top: 100px;
   background-color: #fdd994;
-  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .home-container button {
@@ -23,3 +22,5 @@
   color: rgb(255, 255, 255);
   font-weight: bold;
 }
+
+/* background code */
