--- a/src/components/word-match/WordMatch.css
+++ b/src/components/word-match/WordMatch.css
@@ -1,22 +1,20 @@
 .box {
   border: 4px solid rgb(255, 255, 255);
-  width: 25%;
+  width: 75%;
   padding: 50px;
   margin: auto;
 }
 
-.word-box {
-  display: flex;
-  width: 80%;
-  margin: auto;
+.word {
+  margin-top: 40px;
 }
-.word-box input {
-  width: 50%;
+.letter {
+  width: 100%;
   margin: 10px;
-  padding: 10px;
+  padding: 10px 20px;
   background-color: #fdd994;
   border: 4px solid rgb(255, 252, 252);
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
 }
 
