--- a/src/components/days/Days.css
+++ b/src/components/days/Days.css
@@ -20,8 +20,8 @@
 }
 
 .day-content {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
 }
 
 .days-btn {
