--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,26 +1,168 @@
-.home-container {
-  height: 250px;
-  margin: auto;
-  border: 4px solid rgb(253, 253, 253);
-  border-radius: 10px;
-  padding: 20px 30px;
-  padding-top: 100px;
-  background-color: #fdd994;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+.top-conatiner {
+  margin-bottom: 120px;
+}
+.context {
+  margin-top: 100px;
+  width: 100%;
+  /* position: absolute; */
+  position: static;
+  border: 2px solid #fff;
+  padding: 50px;
+  height: 320px;
 }
 
-.home-container button {
-  background-color: aliceblue;
-  color: #fdd994;
-  font-weight: bold;
-  border: none;
+.context h1 {
+  text-align: center;
+  color: #fff;
+  font-size: 50px;
+}
+
+.context button {
+  background-color: rgb(4, 5, 7);
+  cursor: pointer;
   padding: 15px 50px;
 }
 
-.home-container button:hover {
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
-  font-weight: bold;
+.area {
+  /* background: #4e54c8;
+  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); */
+  width: 100%;
+  height: 70vh;
 }
 
-/* background code */
+.circles {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  font-weight: bold;
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+  left: 65%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+  left: 35%;
+  width: 100px;
+  height: 100px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+  left: 45%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .context {
+    margin-top: 100px;
+    /* width: 100%; */
+    /* position: absolute; */
+    position: static;
+    border: 2px solid #fff;
+    padding: 30px;
+    margin-left: -32px;
+    height: 420px;
+  }
+
+  .context h3 {
+    margin-top: 100px;
+    font-size: 60px;
+  }
+  .area {
+    width: 10%;
+    height: 10vh;
+  }
+}
