--- a/src/components/days/Days.css
+++ b/src/components/days/Days.css
@@ -3,13 +3,11 @@
 }
 
 .days-container {
-  /* max-width: 570px; */
   width: 100%;
   border: 4px solid rgb(253, 253, 253);
   border-radius: 10px;
   padding: 20px 37px;
   background-color: #fdd994;
-  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
   margin-left: -13px;
 }
 
@@ -19,10 +17,10 @@
   text-shadow: 2px 2px black;
 }
 
-.day-content {
+/* .day-content {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-}
+} */
 
 .days-btn {
   margin: 10px;
