--- a/src/components/days/Days.css
+++ b/src/components/days/Days.css
@@ -1,5 +1,5 @@
 .body {
-  background-color: #fdd994;
+  /* background-color: #fdd994; */
 }
 
 .days-container {
@@ -7,7 +7,7 @@
   border: 4px solid rgb(253, 253, 253);
   border-radius: 10px;
   padding: 20px 37px;
-  background-color: #fdd994;
+  /* background-color: #fdd994; */
   margin-left: -13px;
 }
 
